[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Entities/Enemies/Ghost.gd" type="Script" id=1]
[ext_resource path="res://Assets/Custom/Entities/GhostEyes.tres" type="SphereMesh" id=2]

[sub_resource type="SphereShape" id=2]
radius = 4.0

[sub_resource type="Shader" id=20]
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.2.stable's SpatialMaterial.

shader_type spatial;
render_mode async_visible,blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
	ALPHA = albedo.a * albedo_tex.a;
}
"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 20 )
shader_param/albedo = Color( 0.858824, 0.941176, 0.972549, 0.8 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )

[sub_resource type="SphereMesh" id=14]
resource_local_to_scene = true
material = SubResource( 21 )
radial_segments = 9

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.96, 0.94, 0.5, 1 )

[sub_resource type="SphereMesh" id=15]
resource_local_to_scene = true
material = SubResource( 16 )
radius = 0.25
height = 0.5
radial_segments = 6
rings = 2

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.921569, 0.494118, 0.494118, 0.368627 )

[sub_resource type="SphereMesh" id=11]
material = SubResource( 7 )
radius = 34.945

[sub_resource type="Animation" id=18]
resource_name = "Death"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/MainBody:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.941176, 0.972549, 0.8 ), Color( 0.858824, 0.941176, 0.972549, 0.8 ), Color( 0.858824, 0.941176, 0.972549, 0.4 ), Color( 0.858824, 0.941176, 0.972549, 0.2 ), Color( 0.858824, 0.941176, 0.972549, 0 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/MainBody:mesh:material:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.858824, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Body/MainBody:mesh:material:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.941176, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Body/MainBody:mesh:material:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.972549, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Body/MainBody:mesh:material:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/MainBody:mesh:material:albedo_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.941176, 0.972549, 0.8 ) ]
}

[node name="Ghost" type="KinematicBody" groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 2 )

[node name="StateUpdate" type="Timer" parent="."]
autostart = true

[node name="Body" type="Spatial" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )

[node name="MainBody" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000543213, -0.00504761, 0.00270367 )
mesh = SubResource( 14 )
skeleton = NodePath("../..")

[node name="Eyes" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.565, -0.802 )

[node name="RightEye" type="MeshInstance" parent="Body/Eyes"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0.35 )
mesh = ExtResource( 2 )
skeleton = NodePath("../../..")

[node name="LeftEye" type="MeshInstance" parent="Body/Eyes"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, -0.35 )
mesh = SubResource( 15 )
skeleton = NodePath("../../..")

[node name="Range" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 11 )

[node name="PickNewDirection" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 18 )
anims/RESET = SubResource( 19 )

[connection signal="timeout" from="StateUpdate" to="." method="_on_StateUpdate_timeout"]
[connection signal="timeout" from="PickNewDirection" to="." method="_on_PickNewDirection_timeout"]
